--- a/Saucedemo.CLL/Saucedemo.CLL.csproj
+++ b/Saucedemo.CLL/Saucedemo.CLL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.38.0" />
   </ItemGroup>
 
   <ItemGroup>
