--- a/Saucedemo.Tests/Saucedemo.Tests.csproj
+++ b/Saucedemo.Tests/Saucedemo.Tests.csproj
@@ -26,4 +26,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
